--- a/5.scripting/jpl_aws_dockerfile/Dockerfile
+++ b/5.scripting/jpl_aws_dockerfile/Dockerfile
@@ -9,5 +9,5 @@ RUN apt update -y && apt install python3-pip -y && pip install awscli boto bs4 r
 
 # Clone Access Key Generation repository
 
-RUN mkdir ~/.aws/scripts && cd ~/.aws/scripts && git clone https://github.jpl.nasa.gov/cloud/Access-Key-Generation.git
+RUN install -d ~/.aws/scripts && cd ~/.aws/scripts && git clone https://github.jpl.nasa.gov/cloud/Access-Key-Generation.git
 
